--- a/index.html
+++ b/index.html
@@ -29,18 +29,28 @@
 			padding-bottom: 90px;
 		}
 	</style>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-C219GGCQBG"></script>
+	<script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-C219GGCQBG');
+	</script>
 </head>
 <body>
 
 <div class="main">
 	<div class="content-wrap">
-		<section class="container">
+		<section class="container pt-4">
 			<h1 class="">Toggle "Get Started" Messenger Button</h1>
 
 			<div class="mt-4">
 				<label for="page-access-token" class="form-label">Page Access Token</label>
 				<input type="text" class="form-control" id="page-access-token" placeholder="Ex: EAAEKBB5HUZCYBADk...">
-				<div class="form-text">The page access token is never shared and stored.</div>
+				<div class="form-text">The page access token is never shared nor stored.</div>
 			</div>
 
 			<div class="form-check mt-4">
@@ -69,12 +79,12 @@
 			<h2>FAQ</h2>
 
 			<h5><strong>How do I get my page access token?</strong></h5>
-			<p>You have to <a href="https://developers.facebook.com/docs/development/create-an-app/" target="_blank">create a Facebook App</a> first and give your Facebook Page a <code>pages_messaging</code> <a href="https://developers.facebook.com/docs/messenger-platform/reference/messenger-profile-api/get-started-button/#permissions" target="_blank">permission</a>. Then, follow the steps 1 and 2 in the <a href="https://developers.facebook.com/docs/messenger-platform/getting-started/quick-start#getting_started" target="_blank">Facebook tutorial</a>.</p>
+			<p>You have to <a href="https://developers.facebook.com/docs/messenger-platform/getting-started/app-setup" target="_blank">setup a Facebook App</a> first and give your Facebook Page a <code>pages_messaging</code> <a href="https://developers.facebook.com/docs/messenger-platform/reference/messenger-profile-api/get-started-button/#permissions" target="_blank">permission</a>. Then, follow the steps 1 and 2 in the <a href="https://developers.facebook.com/docs/messenger-platform/getting-started/quick-start#getting_started" target="_blank">Facebook tutorial</a>.</p>
 
 			<div class="alert alert-warning">The generated token will NOT be saved in Facebook UI, you have to save your token in a document. Each time you select a Page from the dropdown, a new token will be generated. If a new token is generated, previously created tokens will continue to function.</div>
 
 			<h5 class="mt-4"><strong>The page access token is stored in this website?</strong></h5>
-			<p>No. We don't store nor share your page access token to third party.</p>
+			<p>No. We don't store nor share your page access token in this website and third party.</p>
 
 			<h5 class="mt-4"><strong>What happen if I abuse Facebook API service?</strong></h5>
 			<p>When you click on "Save" button it will run one API request to Facebook but if you make more than <a href="https://developers.facebook.com/docs/messenger-platform/reference/messenger-profile-api/get-started-button/#rate_limit" target="_blank">10 requests within 10 minutes</a>, Facebook won't let you run more than that.</p>
