FEATURE: Add <meta> tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Toggle Get Started Messenger Button</title>
+	<meta name="description" content="Enable or disable the Get Started Messenger button.">
+	<meta name="robots" content="index, follow">
+	<meta property="og:title" content="Toggle Get Started Messenger Button">
+	<meta property="og:description" content="Enable or disable the Get Started Messenger button.">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://roelmagdaleno.github.io/toggle-get-started-button/">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<style>
 		body {
